src/styles/index.css
@import 'tailwindcss';
@keyframes fadeIn {
  from {
    opacity: 0;
    transform: scale(0.95) translateY(10px);
  }
  to {
    opacity: 1;
    transform: scale(1) translateY(0);
  }
}

@keyframes slideInLeft {
  from {
    opacity: 0;
    transform: translateX(-100vw);
    
  }
  to {
    transform: translateX(0);
    opacity: 1;
  }
}

@keyframes slideInRight {
  from {
    opacity: 0;
    transform: translateX(100vw);
    
  }
  to {
    opacity: 1;
    transform: translateX(0);
    
  }
}

@keyframes popUp2 {
  from {
    opacity: 0;
    transform: translateY(400%);
  }
  to {
    opacity: 1;
    transform: translateY(0);
  }
}

